--- a/image_selection/VisAnPrototype/index.html
+++ b/image_selection/VisAnPrototype/index.html
@@ -16,7 +16,7 @@
     
     <script src="js/p5.js" type="text/javascript"></script>
     <script src="commons.js" type="text/javascript"></script>
-    <script src="sketch.1.js" type="text/javascript"></script>
+    <script src="sketch.2.js" type="text/javascript"></script>
 
 
     <style>
@@ -78,7 +78,7 @@
   <body>
   
 
-  <!-- wk an exemplary link. If clicked, the PlugIn will be informed -->
+  <!-- wk an exemplary link. If clicked, the PlugIn will be informed about the URL -->
   <a href='http://p5js.org/'>
     this is a link
   </a>
