New feature: animate a subset of aerials. Edit index.html to test it.

--- a/image_selection/VisAnPrototype/index.html
+++ b/image_selection/VisAnPrototype/index.html
@@ -29,7 +29,7 @@
         text-align: center;
       }
       #link {
-        visibility: hidden;
+        visibility: hidden; /* comment this to enable highlighting */
         position: fixed;
       }
       .canvas {}
@@ -39,7 +39,7 @@
   
   
   <!-- wk an exemplary link. If clicked, the PlugIn will be informed about the URL -->
-  <a href='http://p5js.org/' id="link" visibility='hidden'>
+  <a href='#15SG-1470/5011.ecw' id="link" >
     this is a link
   </a>
   
