--- a/image_selection/VisAnPrototype/index.html
+++ b/image_selection/VisAnPrototype/index.html
@@ -14,8 +14,9 @@
     </script>
     
     
+    <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
     <script src="js/p5.js" type="text/javascript"></script>
-    <!-- <script src="commons.js" type="text/javascript"></script> -->
+    <script src="https://unpkg.com/geometric@2.2.10/build/geometric.min.js"></script>
     <script src="sketch.js" type="text/javascript"></script>
 
 
@@ -32,7 +33,6 @@
         visibility: hidden; /* comment this to enable highlighting */
         position: fixed;
       }
-      .canvas {}
     </style>
   </head>
   <body>
