--- a/image_selection/VisAnPrototype/index.html
+++ b/image_selection/VisAnPrototype/index.html
@@ -41,7 +41,24 @@
   <a href='#15SG-1470/5011.ecw' id="link" >
     this is a link
   </a>
+
+  <!-- wk demonstrate an alternative to sending click and hovering events to the PlugIn -->
+  <a onclick="qgisplugin.filterAerials(['15SG-1470/5011.ecw', '15SG-1470/4037.ecw']);" style="position: fixed; bottom: 0px; left: 0px">
+    show some
+  </a>
+
+  <a onclick="qgisplugin.filterAerials([]);" style="position: fixed; bottom: 0px; right: 0px">
+    show all
+  </a>  
   
-  
+  <a onclick="qgisplugin.highlightAerials(['15SG-1470/5011.ecw', '15SG-1470/4036.ecw']);" style="position: fixed; bottom: 50%; left: 0px">
+    highlight some
+  </a>
+
+  <a onclick="qgisplugin.highlightAerials([]);" style="position: fixed; bottom: 50%; right: 0px">
+    highlight none
+  </a> 
+
+
   </body>
 </html>
