Baby progressive guidance model

--- a/image_selection/VisAnPrototype/index.html
+++ b/image_selection/VisAnPrototype/index.html
@@ -15,7 +15,9 @@
     
     <script src="js/p5.js" type="text/javascript"></script>
     <script src='js/turf.min.js'></script>
+    <script src="model.js" type="text/javascript"></script>
     <script src="communication.js" type="text/javascript"></script>
+    <script src="tooltip.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
 
 
