--- a/image_selection/VisAnPrototype/index.html
+++ b/image_selection/VisAnPrototype/index.html
@@ -17,8 +17,11 @@
     <script src='js/turf.min.js'></script>
     <script src="model.js" type="text/javascript"></script>
     <script src="communication.js" type="text/javascript"></script>
-    <script src="tooltip.js" type="text/javascript"></script>
-    <script src="sketch.js" type="text/javascript"></script>
+    <script src="ui.js" type="text/javascript"></script>
+    <script src="interaction.js" type="text/javascript"></script>
+    <script src="timeline.js" type="text/javascript"></script>
+    <script src="glyphs.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript"></script>
 
 
     <style>
