--- a/image_selection/VisAnPrototype/index.html
+++ b/image_selection/VisAnPrototype/index.html
@@ -21,6 +21,7 @@
     <script src="interaction.js" type="text/javascript"></script>
     <script src="timeline.js" type="text/javascript"></script>
     <script src="glyphs.js" type="text/javascript"></script>
+    <script src="log.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
 
 
